KubernetesTestApi/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-test-api
  labels:
    app: kubernetes-test-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubernetes-test-api
  template:
    metadata:
      labels:
        app: kubernetes-test-api
    spec:
      containers:
      - name: kubernetes-test-api
        image: kubernetestestapi-kubernetes-test-api-image:latest
        imagePullPolicy: Never
