KubernetesTestApi/k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-test-api
  labels:
    app: kubernetes-test-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubernetes-test-api
  template:
    metadata:
      labels:
        app: kubernetes-test-api
    spec:
      containers:
      - name: kubernetes-test-api
        image: kubernetestestapi-kubernetes-test-api:latest
        imagePullPolicy: Never
        ports:
            - containerPort: 80
              protocol: TCP
        resources:
          requests:
            cpu: 200m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi

---

apiVersion: v1
kind: Service
metadata:
  name: kubernetes-test-api-service
spec:
 type: NodePort 
 ports:
    - port: 80
      nodePort: 32080
      protocol: TCP
 selector:
   app: kubernetes-test-api
