KubernetesTestApi/k8s/load-balance.yml
apiVersion: v1
kind: Service
metadata:
  name: test-loadbalancer-service
spec:
  type: LoadBalancer 
  selector:
    app: kubernetes-test-api
  ports:
    - protocol: TCP
      port: 4003
      targetPort: 80
