KubernetesTestApi/k8s/nodeport-test.yml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-test-api-service
spec:
 type: NodePort 
 ports:
    - port: 80
      nodePort: 30180
      protocol: TCP
 selector:
   app: kubernetes-test-api
